cleaned up remaining .tex source files; converted to rmd

--- a/_cleaned_tex-sourcefiles/MY451_0.tex
+++ b/_cleaned_tex-sourcefiles/MY451_0.tex
@@ -5,13 +5,13 @@
 \hfill
 \includegraphics[height=2.2cm]{lse}
 
-\vspace*{3cm}
+
 \begin{center}
-{\LARGE \textbf{MY451}}\\[2ex]{\LARGE \textbf{Introduction to Quantitative Analysis}}
-\\[7ex]
+{\LARGE \textbf{MY451}}\\{\LARGE \textbf{Introduction to Quantitative Analysis}}
+\\
 %{\Large Michaelmas Term 2005}\\[15ex]
-{\Large 2015-16}\\[15ex]
-{\Large Jouni Kuha}\\[2ex]{\Large Department of Methodology}\\[1ex]{\Large London School of Economics and
+{\Large 2015-16}\\
+{\Large Jouni Kuha}\\{\Large Department of Methodology}\\{\Large London School of Economics and
 Political Science}
 \end{center}
 
@@ -161,7 +161,7 @@ feel otherwise, some such books are mentioned on page
 
 
 \subsubsection{Homework}
-\vspace*{-1.5ex}
+
 There will be homework assignments each week. These are your opportunity
 to practice interpreting the results of the types of analyses that are introduced in
 the lectures and then carried out in the computer classes. The homework questions
@@ -230,7 +230,7 @@ reinforcing ways of helping you get to grips with this material.
 
 \subsubsection{Examinations/assessment}
 
-\vspace*{-2ex}
+
 There will be a \textbf{two-hour examination in the Summer Term 2016}.
 This is an \textbf{open-book examination}, to which you are allowed to
 bring in any written material, including the coursepack and any text
@@ -245,10 +245,10 @@ with a course code such as MC4M1 or MY4M1. If this is the case, your
 result for MY451 will contribute only part of the final mark for the
 package, with a weight determined by the regulations.
 
-\vspace*{-1ex}
+
 \subsubsection{Computing}
 
-\vspace*{-2ex}
+
 Students must know their Username and Password in time for the first
 class.  This information can be obtained from IT Help Desk (Library, 1st
 floor).  The course uses Microsoft Windows-based software.
@@ -258,20 +258,20 @@ courses in Windows during the first two weeks of the term.
 The statistical package being used is SPSS, which will be
 introduced in the first computing class of the course.
 
-\vspace*{-1ex}
+
 \subsubsection{Software availability}
 
-\vspace*{-2ex}
+
 A personal copy of the program SPSS for Windows can be bought by course
 participants (maximum 1 copy per person) for the price of
 %approximately
 \pounds10
 from IT services, \textbf{not} the Department of Methodology.
 
-\vspace*{-1ex}
+
 \subsubsection{Feedback}
 
-\vspace*{-2ex}
+
 We would welcome any comments you have on the course.  If there are any
 problems that we can deal with, we will attempt to do so as quickly as
 possible.  Speak to any member of the course team, or to your
@@ -284,10 +284,10 @@ coursepack, so that we can correct them for next year.
 %have been introduced in the process. Please do tell us about any that
 %you discover.
 
-\vspace*{-1ex}
+
 \subsubsection{Acknowledgements}
 
-\vspace*{-2ex}
+
 The computer classes were extensively revised for 2012-13. The hard work
 of designing the new exercises and writing the revised instructions was
 done by Sally Stares.
@@ -308,48 +308,48 @@ the current revision.
 & Lecture  & Course overview and organisation. Introduction to basic
 concepts\\
 & Class & \textbf{No class}\\
-& Coursepack & Chapter \ref{c_intro}  \\[3ex]
+& Coursepack & Chapter \ref{c_intro}  \\
 \multicolumn{2}{l}{\textbf{Week 2}} & \\
 & Lecture & Descriptive statistics for categorical variables  \\
 & Class & Introduction to SPSS. Descriptive statistics for categorical variables\\
 & Coursepack &
 Sections
 \ref{s_descr1_intro}--\ref{s_descr1_2cat} and
-\ref{s_descr1_presentation}\\[3ex]
+\ref{s_descr1_presentation}\\
 \multicolumn{2}{l}{\textbf{Week 3}} & \\
 & Lecture \& Class & Descriptive statistics for continuous variables \\
 & Coursepack & Sections
 \ref{s_descr1_1cont}--\ref{s_descr1_2cont}
-\\[3ex]
+\\
 \multicolumn{2}{l}{\textbf{Week 4}} & \\
 & Lecture  \& Class & Analysis of two-way contingency tables \\
 & Coursepack & Chapters \ref{c_samples} and \ref{c_tables}
-\\[3ex]
+\\
 \multicolumn{2}{l}{\textbf{Week 5}} & \\
 & Lecture  \& Class& Inference for means in two populations \\
-& Coursepack & Chapters \ref{c_contd} and \ref{c_means} \\[3ex]
+& Coursepack & Chapters \ref{c_contd} and \ref{c_means} \\
 \multicolumn{2}{l}{\textbf{Week 6}} & \\
-&Reading Week & \textbf{No lecture, no class}. Revision quiz  available on Moodle. \\[3ex]
+&Reading Week & \textbf{No lecture, no class}. Revision quiz  available on Moodle. \\
 \multicolumn{2}{l}{\textbf{Week 7}} & \\
 & Lecture  \& Class & Inference for proportions in one and two populations\\
-& Coursepack & Chapter \ref{c_probs} \\[3ex]
+& Coursepack & Chapter \ref{c_probs} \\
 \multicolumn{2}{l}{\textbf{Week 8}} & \\
 & Lecture  \& Class & Correlation and simple linear regression as descriptive methods \\
-& Coursepack & Sections \ref{s_regression_intro}--\ref{ss_regression_simple_est} \\[3ex]
+& Coursepack & Sections \ref{s_regression_intro}--\ref{ss_regression_simple_est} \\
 \multicolumn{2}{l}{\textbf{Week 9}} & \\
 & Lectures  & \\
-& \hspace*{1em}Hour 1  &
+& Hour 1  &
 Inference for the simple linear regression model \\
-& \hspace*{1em}Hour 2  &
+& Hour 2  &
 Three-way contingency tables \\
 & Class & Simple linear regression \\
 & Coursepack & Section \ref{ss_regression_simple_inf}
 (Hour 1); Section \ref{s_regression_causality} and
-Chapter \ref{c_3waytables} (Hour 2) \\[3ex]
+Chapter \ref{c_3waytables} (Hour 2) \\
 \multicolumn{2}{l}{\textbf{Week 10}} & \\
 & Lecture \& Class & Multiple linear regression \\
 & Coursepack & Sections \ref{s_regression_multiple}--\ref{s_regression_rest}
-\\[3ex]
+\\
 \multicolumn{2}{l}{\textbf{Week 11}} & \\
 & Lecture & Review and further statistical methods\\
 & Class & Discussion and additional exercise on multiple linear regression \\
