--- a/_cleaned_tex-sourcefiles/MY451_1.tex
+++ b/_cleaned_tex-sourcefiles/MY451_1.tex
@@ -1,14 +1,14 @@
 \chapter{Introduction}
 \label{c_intro}
 
-\vspace*{-2.5ex}
+
 \section{What is the purpose of this course?}
 \label{s_intro_purpose}
 
 %To begin our story with the beginning of our story,
 %let us consider
 %the title of this course:
-%\vspace*{-2ex}
+%
 The title of any course should be descriptive of its contents.
 This one is called
 %The title of this course is
@@ -299,7 +299,7 @@ analysis suggests that the labour force status of the respondents
 is...'', with the definition of this variable and its categories
 also clearly stated.
 \end{itemize}
-\vspace*{-2ex}
+
 Collecting quantitative data involves determining the values of a set of
 variables for a group of subjects and assigning numbers to these values.
 This is also known as \textbf{measuring} the values of the
@@ -622,12 +622,12 @@ These connections are summarized in Table \ref{t_vartypes}.
 Section
 \ref{ss_intro_def_vartypes}.}
 \label{t_vartypes}
-\vspace*{2ex}
+
 \begin{tabular}{l|l|l|}
 \multicolumn{1}{l}{ }
-& \multicolumn{2}{c}{\underline{Measurement level}} \\
+& \multicolumn{2}{c}{Measurement level} \\
 \multicolumn{1}{l}{ }
-& \multicolumn{1}{l}{\rule[-3mm]{0mm}{8mm}\textbf{Nominal/ordinal}} &
+& \multicolumn{1}{l}{\textbf{Nominal/ordinal}} &
 \multicolumn{1}{l}{\textbf{Interval/ratio}} \\ \cline{2-3}
 \textbf{Discrete} &
 Many & \emph{Counts} \\
@@ -646,7 +646,7 @@ $\bullet$ If only two categories, & \\
 &
 variable is \textbf{binary} & \\
 &
-(\textbf{dichotomous}) & \\[1ex] \cline{2-3}
+(\textbf{dichotomous}) & \\ \cline{2-3}
 \textbf{Continuous} & None & Many \\
 \cline{2-3}
 \end{tabular}
