--- a/_cleaned_tex-sourcefiles/MY451_2.tex
+++ b/_cleaned_tex-sourcefiles/MY451_2.tex
@@ -35,7 +35,7 @@ for presentation of descriptive tables and graphs in Section
 
 Two examples are used to illustrate the methods throughout this chapter:
 
-\underline{\emph{Example: Country data}}\label{country_example}
+\emph{Example: Country data}\label{country_example}
 
 Consider data for 155 countries on three
 variables:
@@ -62,7 +62,7 @@ ordinal, and it is regarded as such in this chapter. However, it is the
 kind of variable which might in many analyses be treated instead
 as an effectively continuous, interval-level variable.
 
-\underline{\emph{Example: Survey data on attitudes towards income redistribution}}
+\emph{Example: Survey data on attitudes towards income redistribution}
 \label{p_ess_example}
 
 The data for the second example come from Round 5 of the European Social
@@ -76,9 +76,9 @@ considered:
 \item
 \textbf{Sex} of the respondent, coded as 1=Male, 2=Female.
 \item
-Answer to the following survey question:\\[.5ex]
-\hspace*{1em}\emph{``The government should
-take measures to reduce differences in income levels''},\\[.5ex]
+Answer to the following survey question:\\
+\emph{``The government should
+take measures to reduce differences in income levels''},\\
 with five response
 options coded as ``Agree strongly''=1, ``Agree''=2, ``Neither agree nor
 disagree''=3, ``Disagree''=4, and ``Disagree strongly''=5. This is a
@@ -382,7 +382,7 @@ by sex and attitude towards income redistribution.}
 & \multicolumn{5}{|c|}{\emph{``The government should
 take measures}} & \\
 & \multicolumn{5}{|c|}{\emph{to reduce differences in income levels''}}
-& \\[.3ex]
+& \\
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male &  160& 439 & 187 &200  & 41 & 1027 \\
@@ -394,7 +394,7 @@ Total & 366 & 1090 & 426 & 387 & 75 & 2344 \\
 2010, UK respondents only.}
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 \begin{itemize}
@@ -483,7 +483,7 @@ with each combination of sex and attitude towards income redistribution.}
 & \multicolumn{5}{|c|}{\emph{``The government should
 take measures}} & \\
 & \multicolumn{5}{|c|}{\emph{to reduce differences in income levels''}}
-& \\[.3ex]
+& \\
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male &  0.068& 0.187 & 0.080 &0.085  & 0.017& 0.438 \\
@@ -495,7 +495,7 @@ Total & 0.156 & 0.465 & 0.182 & 0.165& 0.032 & 1.000 \\
 2010, UK respondents only.}
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 \subsection{Conditional proportions}
@@ -544,7 +544,7 @@ of attitude given sex.}
 & \multicolumn{5}{|c|}{\emph{``The government should
 take measures}} & \\
 & \multicolumn{5}{|c|}{\emph{to reduce differences in income levels''}}
-& \\[.3ex]
+& \\
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male &  160& 439 & 187 &200  & 41 & 1027 \\
@@ -559,7 +559,7 @@ Total & 366 & 1090 & 426 & 387 & 75 & 2344 \\
 2010, UK respondents only.}
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 We could also have calculated conditional proportions within the
@@ -720,8 +720,8 @@ comparisons of five pairs of proportions, one for each level of the
 attitude variable. This number gets larger still if the explanatory
 variable also has several levels, as in the following example:
 
-\underline{\emph{Example: Importance of short-term gains
-for investors}}
+\emph{Example: Importance of short-term gains
+for investors}
 
 Information on the behaviour and expectations of individual investors
 was collected by sending a questionnaire to a sample of
@@ -769,7 +769,7 @@ Total & 494 & 235 & 145 & 98 & 972 \\
 \hline
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 Here there are four conditional distributions, one for each age group,
@@ -1104,7 +1104,7 @@ to read).
 the corresponding frequency polygon.}
 \label{f_hist_gdp}
 \begin{center}
-\vspace*{-6ex}
+
 \includegraphics[width=13.5cm]{gdp}
 %\includegraphics[height=9cm]{gdp}
 %\epsfig{file=gdp.eps, height=9cm}
@@ -1156,7 +1156,7 @@ polygons will later be useful for making comparisons between several
 distributions.
 
 \subsubsection{Stem and leaf plots}
-\vspace*{-1ex}
+
 A \textbf{stem and leaf plot} is a close relative of the histogram,
 and is used for much the same purposes, mostly in small data sets. It
 is easiest to explain through an example, so let us consider the GDP
@@ -1176,7 +1176,7 @@ thousands of dollars) will define the \emph{stem}.
 \caption{Stem and leaf plot of GDP per capita in the country data
 (Stem=thousands of dollars, Leaf=hundreds of dollars).}
 \label{f_stemgdp}
-\vspace*{2ex}
+
 \begin{tabular}{l|l}
 \texttt{0} & \texttt{5566677778888899}\\
 \texttt{1} & \texttt{0001112233334445566677788899999} \\
@@ -1280,10 +1280,10 @@ single page.
 ($n=155$).}
 \label{f_boxplot_gdp}
 \begin{center}
-\vspace*{-8ex}
+
 \includegraphics[width=15cm]{box_gdp}
 %\includegraphics[width=125mm]{poppolygons3}
-\vspace*{-3ex}
+
 \end{center}
 \end{figure}
 
@@ -1574,9 +1574,9 @@ in panel B of Figure \ref{f_skews} is
 & \multicolumn{3}{|c|}{Measures of central tendency} &
 \multicolumn{3}{|c|}{Measures of variation} \\ \hline
 Variable & Mode & Median & Mean & Range & IQR & s.d. \\ \hline
-Region & Africa & * & * & * & * & * \\[.5ex]
+Region & Africa & * & * & * & * & * \\
 Democracy index & 0 & 6 & 5.4$^{\dagger}$ & 10$^{\dagger}$& 8$^{\dagger}$
-& 3.9$^{\dagger}$\\[.5ex]
+& 3.9$^{\dagger}$\\
 GDP per capita & \$800 & & & & & \\
  & and \$1900 & \$4700 & \$8600 & \$37300 & \$9700& \$9450\\
 \hline
@@ -1628,7 +1628,7 @@ larger or smaller) from the rest of the data, are known as
 pull the mean far towards itself, even beyond the range of all the
 other observations, as in the following example:
 
-\underline{\emph{Example: A sample with an outlier}}\\
+\emph{Example: A sample with an outlier}\\
 Suppose that an M.Sc.\ student, preparing her dissertation on elements
 of social capital in Canada, is examining various measures of community
 activities in a sample of fourty municipalities in the province of
@@ -1692,12 +1692,12 @@ not described here.
 \caption{A hypothetical examples of
 test marks of students in three classes.}
 \label{t_classmarks}
-\vspace*{3ex}
+
 \begin{tabular}{ll}%\hline
 Class 1: &
-6 6 6 6 6 6 6 6 6 6 6 6 6 6 \\[1ex]
+6 6 6 6 6 6 6 6 6 6 6 6 6 6 \\
 Class 2: &
-4 4 5 5 5 6 6 6 6 7 7 7 8 8 \\[1ex]
+4 4 5 5 5 6 6 6 6 7 7 7 8 8 \\
 Class 3: &
 1 2 2 3 4 4 4 8 8 9 9 10 10 10
 \\ \hline
@@ -1802,7 +1802,7 @@ the class example of page \pageref{p_classex}.}
 \label{t_sdex}
 \begin{center}
 \begin{tabular}{|l|rrr|}\hline
-& \multicolumn{3}{|c|}{\vspace*{-2.4ex}}\\
+& \multicolumn{3}{|c|}{}\\
 Student& $Y_{i}$ & $Y_{i}-\bar{Y}$ & $(Y_{i}-\bar{Y})^{2}$\\ \hline
 1 & 1 & $-5$ & 25 \\
 2 & 2& $-4$ & 16\\
@@ -1818,7 +1818,7 @@ Student& $Y_{i}$ & $Y_{i}-\bar{Y}$ & $(Y_{i}-\bar{Y})^{2}$\\ \hline
 12& 10& +4& 16 \\
 13& 10& +4 & 16\\
 $14=n$& 10& +4 & 16\\ \hline
-& \multicolumn{3}{|c|}{\vspace*{-1.6ex}}\\
+& \multicolumn{3}{|c|}{}\\
 Sum & $\sum Y_{i}=84$&
 $\sum(Y_{i}-\bar{Y})=0$
 &
@@ -1905,7 +1905,7 @@ following is a real
 example of this kind, where variation was in fact of more interest
 than central tendency:
 
-\underline{\emph{Example: Variation in rates of economic growth}}\\ In
+\emph{Example: Variation in rates of economic growth}\\ In
 an article titled ``Dancing in step'' on November 13th 2004, \emph{The
 Economist} discussed a set of data (collected by the J.\ P.\
 Morgan Chase bank) on the annual growth rates (in percentage
@@ -2145,7 +2145,7 @@ countries between 1993 and 2003, indexed to 100 in 1993.}
 %\includegraphics[width=13.5cm]{houseprices}
 \includegraphics[width=10cm]{houseprices}
 \end{center}
-\vspace*{-2ex}
+
 {\footnotesize Source: \emph{The Economist}, June 26th, 2004. The
 numbers were estimated from the graph in the magazine, so they are
 approximate.}
@@ -2213,7 +2213,7 @@ created.
 \caption{The country data set used as an example
 in Chapter \ref{c_descr1} (R=\texttt{region}, D=\texttt{democracy}).}
 \label{t_countrydata}
-%\vspace*{-1ex}
+%
 {\footnotesize
 \begin{ttfamily}
 \begin{tabular}{|lrrr|lrrr|lrrr|}\hline
