--- a/_cleaned_tex-sourcefiles/MY451_3.tex
+++ b/_cleaned_tex-sourcefiles/MY451_3.tex
@@ -217,7 +217,7 @@ always clearly defined, nor is there often any reference to probability
 sampling. Instead, the study designs may for example resemble the
 following two examples:
 
-\underline{\emph{Example: A psychological experiment}}\\
+\emph{Example: A psychological experiment}\\
 Fifty-nine undegraduate students from a large U.S.\ university took part
 in a psychological experiment\footnote{Experiment 1 in Anderson, C.\ A.,
 Carnagey, N.\ L., and Eubanks, J.\ (2003). ``Exposure to violent media:
@@ -232,7 +232,7 @@ hostile feelings), obtained after the participants had listened to a
 song, and the researchers were interested in comparing levels of
 hostility between the two groups.
 
-\underline{\emph{Example: Voting in a congressional election}}\\
+\emph{Example: Voting in a congressional election}\\
 A political-science article\footnote{ Carson, J.\ L.\ et al.\ (2001).
 ``The impact of national tides and district-level effects on electoral
 outcomes: the U.S.\ congressional elections of 1862--63''.
@@ -369,12 +369,12 @@ overall percentages [in square brackets].}
 & \multicolumn{5}{|c|}{\emph{``The government should
 take measures}} & \\
 & \multicolumn{5}{|c|}{\emph{to reduce differences in income levels''}}
-& \\[.3ex]
+& \\
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male & 3.84 & 10.08 & 4.56 & 4.32 & 1.20  &  24.00\\
 & (16.00) & (42.00) &(19.00) & (18.00) & (5.00) & (100) \\
-& [7.68] & [20.16] & [9.12] & [8.64] & [2.40] & [48.00] \\[.5ex]
+& [7.68] & [20.16] & [9.12] & [8.64] & [2.40] & [48.00] \\
 Female & 4.16 & 13.00 & 4.68 & 3.38 & 0.78 & 26.00\\
 & (16.00) & (50.00) & (18.00) & (13.00) & (3.00) & (100)\\
 & [8.32] & [26.00] & [9.36] & [6.76] & [1.56] & [52.00] \\
@@ -384,7 +384,7 @@ Total & 8.00 & 23.08 &  9.24&  7.70& 1.98 & 50 \\
 \hline
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 Imagine now that the full population consisted of 50 million people, and
@@ -489,7 +489,3 @@ intervals).
 Chapter \ref{c_means}: Means of continuous variables (probability distributions
 of continuous variables, and inference for such variables).
 \end{itemize}
-
-
-
-
