--- a/_cleaned_tex-sourcefiles/MY451_4.tex
+++ b/_cleaned_tex-sourcefiles/MY451_4.tex
@@ -27,7 +27,7 @@ of attitude given sex.}
 & \multicolumn{5}{|c|}{\emph{``The government should
 take measures}} & \\
 & \multicolumn{5}{|c|}{\emph{to reduce differences in income levels''}}
-& \\[.3ex]
+& \\
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male &  160& 439 & 187 &200  & 41 & 1027 \\
@@ -42,7 +42,7 @@ Total & 366 & 1090 & 426 & 387 & 75 & 2344 \\
 2010, UK respondents only.}
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 Unlike in Section \ref{ss_descr1_2cat_tables}, we will now go beyond
@@ -320,7 +320,7 @@ can be ignored.
 \begin{center}
 %\includegraphics[bb=10 11 585 831, width=130mm]{spsschi2.eps}
 \includegraphics[width=100mm]{chi2test_ess}
-\vspace*{-2ex}
+
 \end{center}
 \end{figure}
 
@@ -467,7 +467,7 @@ Male & SA & 160 & 160.4 & $-0.4$& 0.16& 0.001 \\
 Male & A & 439 & 477.6 & $-38.6$ & 1489.96& 3.120 \\
 Male & 0 & 187 & 186.6 & 0.4& 0.16& 0.001 \\
 Male & D & 200 & 169.6 & 30.4& 924.16& 5.449 \\
-Male & SD & 41 & 32.9 & 8.1& 65.61& 1.994 \\[.5ex]
+Male & SD & 41 & 32.9 & 8.1& 65.61& 1.994 \\
 Female & SA & 206 & 205.6 & 0.4& 0.16 & 0.001 \\
 Female & A & 651 & 612.4 & 38.6& 1489.96& 2.433 \\
 Female & 0 & 239 & 239.4 & $-0.4$& 0.16& 0.001 \\
@@ -643,18 +643,18 @@ population of 50 million people where sex and attitude are independent,
 and in one random sample from this population.}
 \label{t_sex_attitude_H0pop}
 
-\vspace*{1ex}
+
 \emph{Population (frequencies are in millions of people):}
 \begin{center}
 \begin{tabular}{|l|ccccc|r|}\hline
 & \multicolumn{5}{|c|}{\emph{``The government should
 take measures}} & \\
 & \multicolumn{5}{|c|}{\emph{to reduce differences in income levels''}}
-& \\[.3ex]
+& \\
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male & 3.744& 11.160& 4.368& 3.960& 0.768&  24.00\\
- & (0.156) & (0.465) & (0.182) & (0.165)& (0.032) & (1.0)  \\[.5ex]
+ & (0.156) & (0.465) & (0.182) & (0.165)& (0.032) & (1.0)  \\
 Female & 4.056& 12.090& 4.732& 4.290& 0.832& 26.00\\
  & (0.156) & (0.465) & (0.182) & (0.165)& (0.032) & (1.0) \\
 \hline
@@ -663,14 +663,14 @@ Total & 7.800 & 23.250 &  9.100&  8.250& 1.600 & 50 \\
 \hline
 \end{tabular}
 \end{center}
-\vspace*{1ex}
+
 \emph{Sample:}
 \begin{center}
 \begin{tabular}{|l|ccccc|r|}\hline
  & Agree & & Neither agree & & Disagree & \\
 Sex & strongly & Agree & nor disagree & Disagree & strongly & Total \\ \hline
 Male & 181& 505& 191& 203& 41& 1121 \\
- & (0.161) & (0.450) & (0.170) & (0.181)& (0.037) & (1.0)  \\[.5ex]
+ & (0.161) & (0.450) & (0.170) & (0.181)& (0.037) & (1.0)  \\
 Female & 183& 569& 229& 202& 40& 1223\\
  & (0.150) & (0.465) & (0.187) & (0.165)& (0.033) & (1.0) \\
 \hline
@@ -680,7 +680,7 @@ Total & 364& 1074& 420& 405& 81& 2344 \\
 \multicolumn{7}{l}{\small $\chi^{2}=2.8445$}
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 In the example we have a sample of 2344 observations, so to match that
@@ -734,7 +734,7 @@ freedom.
 \begin{center}
 \includegraphics[width=8.5cm]{chi2sims}
 \end{center}
-\vspace*{-3ex}
+
 \end{figure}
 
 The form of the sampling distribution can also be derived
@@ -761,11 +761,11 @@ also always non-negative.
 \caption{Probability curves of some $\chi^{2}$ distributions with
 different degrees of freedom (df).}
 \label{f_chi2dists}
-\vspace*{-2ex}
+
 \begin{center}
 \includegraphics[width=115mm]{chi2dists}
 \end{center}
-\vspace*{-3ex}
+
 \end{figure}
 
 For the $\chi^{2}$  test statistic of
@@ -885,7 +885,7 @@ $\chi^{2}=18.86$.}
 \begin{center}
 \includegraphics[width=8cm]{chi2_pval}
 \end{center}
-\vspace*{-3ex}
+
 \end{figure}
 
 \label{p_spss2b}
@@ -1162,5 +1162,3 @@ When the association is judged to be
 statistically significant, its nature and magnitude can be further
 explored using the descriptive methods for two way tables discussed in Section
 \ref{s_descr1_2cat}.
-
-
