--- a/_cleaned_tex-sourcefiles/MY451_6.tex
+++ b/_cleaned_tex-sourcefiles/MY451_6.tex
@@ -52,11 +52,11 @@ frequency polygon, from Health Survey for
 England 2002 (respondents aged 25 or over, $n=4489$).}
 \label{f_bp1}
 \begin{center}
-\vspace*{-4ex}
+
 %\includegraphics[height=9cm]{bloodp1}
 \includegraphics[width=13.5cm]{bloodp1}
 \end{center}
-%\vspace*{-4ex}
+%
 \end{figure}
 
 The respondents whose blood pressures are summarized in Figure
@@ -124,9 +124,9 @@ some sample statistics introduced in Chapter
 \ref{c_descr1}, specifically the \emph{sample} mean, variance and
 standard deviation
 \begin{eqnarray}
-\bar{Y}&=&\frac{\sum Y_{i}}{n}, \label{Ybar_ch6} \\[.3ex]
-s^{2} &=& \frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1} \hspace*{1em}\text{and}
-\label{s2_ch6} \\[.3ex]
+\bar{Y}&=&\frac{\sum Y_{i}}{n}, \label{Ybar_ch6} \\
+s^{2} &=& \frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1} \text{and}
+\label{s2_ch6} \\
 s &=& \sqrt{\frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1}}
 \label{s_ch6}
 \end{eqnarray}
@@ -158,11 +158,11 @@ in Sections \ref{s_contd_popdistrs}--\ref{s_contd_clt}.}
 & & & Standard & \\
 & Size & Mean & Deviation & Variance \\ \hline
 Population
-\rule[-3mm]{0mm}{8mm}
+
 & $N=4489$ & $\mu=74.2$ & $\sigma=11.3$ &
 $\sigma^{2}=127.87$ \\ \hline
 Sample
-\rule[-3mm]{0mm}{8mm}
+
 & $n=50$ & $\bar{Y}=72.6$ & $s=12.7$ & $s^{2}=161.19$ \\
 \hline
 \end{tabular}
@@ -249,11 +249,11 @@ be meaningful and not misleading.
 together with a normal curve with the same mean and variance.}
 \label{f_bp2}
 \begin{center}
-\vspace*{-4ex}
+
 %\includegraphics[height=8.5cm]{bloodp2}
 \includegraphics[width=11.5cm]{bloodp2}
 \end{center}
-\vspace*{-3ex}
+
 \end{figure}
 
 \label{p-model}
@@ -349,12 +349,12 @@ to the right and centered around 5.
 \caption{Three normal distributions with different means and/or
 variances.}
 \label{f_3norms}
-%\vspace*{-2ex}
+%
 \begin{center}
 %\includegraphics[height=8.5cm]{threenorms}
 \includegraphics[width=11cm]{threenorms}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 The variance $\sigma^{2}$ determines how widely spread the curve is. In
@@ -405,7 +405,7 @@ the mean (the grey area) is 0.68, and the probability of it being within
 %\includegraphics[height=8.5cm]{norm1}
 \includegraphics[width=12cm]{norm1}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 Figure \ref{f_norm1} illustrates this further with some results which hold for
@@ -430,7 +430,7 @@ Such calculations can also be used to determine probabilities in particular
 examples. Returning to the blood pressure data,
 we might for example
 be interested in
-\vspace*{-2ex}
+
 \begin{itemize}
 \item
 the proportion of people in some population whose diastolic blood
@@ -483,7 +483,7 @@ plot shows probabilities for the ranges of values at most 60
 %\includegraphics[height=8.5cm]{normbp}
 \includegraphics[width=12cm]{normbp}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 \begin{table}
@@ -496,7 +496,7 @@ in the column labelled ``$z$''. The full table is shown on p.\
 \begin{center}
 {\footnotesize
 \begin{tabular}{|r|r|}\hline
-\rule[1ex]{0mm}{2ex}$z$ & Tail Prob.\ \\
+$z$ & Tail Prob.\ \\
 \hline
 $\vdots$ & $\vdots$\\
 1.24 & 0.1075 \\
@@ -673,11 +673,11 @@ for two sample sizes. In both cases the population distribution is
 normal with $\mu=74.2$ and $\sigma=11.3$.
 }
 \label{f_sampld2}
-\vspace*{-2ex}
+
 \begin{center}
 \includegraphics[width=12cm]{sampld2_bp}
 \end{center}
-\vspace*{-3ex}
+
 \end{figure}
 
 The connection between sample size and the variability of a sampling
@@ -727,10 +727,10 @@ deviation $\sigma/\sqrt{n}$.
 }
 \label{f_sampld}
 \begin{center}
-\vspace*{-2ex}
+
 \includegraphics[width=12cm]{sampld1_bp}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 The match between the curve and the histogram in Figure \ref{f_sampld}
@@ -860,7 +860,7 @@ samples sizes $n$ are 10, 30, 100 and 1000.}
 \begin{center}
 \includegraphics[width=140mm]{sampld_p}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 The variability of the sampling distribution will again depend on $n$.
