--- a/_cleaned_tex-sourcefiles/MY451_7.tex
+++ b/_cleaned_tex-sourcefiles/MY451_7.tex
@@ -27,7 +27,7 @@ The following five examples will be used for illustration throughout
 this chapter. Summary statistics for them are
 shown in Table \ref{t_groupex}.
 
-\underline{\textbf{Example 7.1}}: \textbf{Survey data on diet}
+\textbf{Example 7.1}: \textbf{Survey data on diet}
 
 The National Diet and Nutrition Survey of adults aged 19--64
 living in private households in Great Britain was carried out in
@@ -61,14 +61,14 @@ $s=6.11$).
 & $n$ & $\bar{Y}$ & $s$ &  \\ \hline
 \multicolumn{5}{|l|}{Example 7.1: Variables from the National Diet and Nutrition Survey} \\
 Fruit and vegetable consumption & 1724 & 2.8 & 2.15 & \\
-(400g portions) & & & & \\[.5ex]
-Total energy intake from fat (\%) & 1724 & 35.3& 6.11 & \\[1ex]
+(400g portions) & & & & \\
+Total energy intake from fat (\%) & 1724 & 35.3& 6.11 & \\
 \hline
 \multicolumn{5}{|l|}{\textbf{Two independent samples}} \\
 & $n$ & $\bar{Y}$ & $s$& Diff.  \\ \hline
 \multicolumn{5}{|l|}{Example 7.2: Average weekly hours spent on housework} \\
 Men & 635 & 7.33 & 5.53 & \\
-Women & 469 & 8.49 & 6.14 & 1.16 \\[1ex]
+Women & 469 & 8.49 & 6.14 & 1.16 \\
 \multicolumn{5}{|l|}{Example 7.3: Perceived friendliness of a police officer} \\
 No sunglasses & 67 & 8.23 & 2.39 &  \\
 Sunglasses & 66 & 6.49 & 2.01 & -1.74 \\
@@ -78,7 +78,7 @@ Sunglasses & 66 & 6.49 & 2.01 & -1.74 \\
 \multicolumn{5}{|l|}{Example 7.4: Father's personal well-being}\\
 Sixth month of wife's pregnancy & 109 & 30.69 & & \\
 One month after the birth & 109 & 30.77 & 2.58 & 0.08
-\\[1ex]
+\\
 \multicolumn{5}{|l|}{Example 7.5: Traffic flows on successive Fridays}\\
 Friday the 6th & 10 & 128,385 & &   \\
 Friday the 13th & 10 & 126,550 & 1176 & -1835 \\
@@ -88,7 +88,7 @@ Friday the 13th & 10 & 126,550 & 1176 & -1835 \\
 \end{table}
 
 %\newpage
-\textbf{\underline{Example 7.2}: Housework by men and women}
+\textbf{Example 7.2: Housework by men and women}
 
 This example uses data from the 12th wave of the British Household Panel
 Survey (BHPS), collected in 2002. BHPS is an ongoing survey of UK
@@ -117,7 +117,7 @@ the sample standard deviations $s_{1}$ and $s_{2}$ are also shown in
 Table \ref{t_groupex}.
 
 %\newpage
-\textbf{\underline{Example 7.3}: Eye contact and perceived friendliness of police
+\textbf{Example 7.3: Eye contact and perceived friendliness of police
 officers}
 
 This example is based on an experiment conducted to examine the effects
@@ -153,7 +153,7 @@ report.
 
 \newpage
 \label{p_dependentex}
-\textbf{\underline{Example 7.4}: Transition to parenthood}
+\textbf{Example 7.4: Transition to parenthood}
 
 In a study of the stresses and feelings associated with parenthood, 109
 couples expecting their first child were interviewed before and after the
@@ -178,7 +178,7 @@ Specifically, the standard error of the difference in Table
 \ref{t_groupex} has been made up in such a way that the results of a
 significance test for the mean difference agree with those in the article.
 
-\textbf{\underline{Example 7.5}: Traffic patterns on Friday the 13th}
+\textbf{Example 7.5: Traffic patterns on Friday the 13th}
 
 A common superstition regards the 13th day of any month falling on a
 Friday as a particularly unlucky day. In a study examining the possible
@@ -714,10 +714,10 @@ definitions of the statistics.}
 $\hat{\Delta}$ &
 $\hat{\sigma}_{\hat{\Delta}}$ & $t$ & $P$-value & 95 \% C.I. \\ \hline
 \multicolumn{5}{|l|}{Example 7.2: Average weekly hours spent on
-housework} \\[.7ex]
-1.16 & 0.353 & 3.29 & 0.001 & (0.47; 1.85) \\[1ex]  \hline
+housework} \\
+1.16 & 0.353 & 3.29 & 0.001 & (0.47; 1.85) \\  \hline
 \multicolumn{5}{|l|}{Example 7.3: Perceived friendliness of a police
-officer} \\[.7ex]
+officer} \\
 $-1.74$ & 0.383 & $-4.55$ & $<0.001$ & $(-2.49; -0.99)$
 \\
 \hline
@@ -1376,7 +1376,7 @@ Fruit and vegetable & 1724 & 2.8 & 2.15
 & 5 & -49.49 & $<0.001$&
 $<0.001$& (2.70; 2.90)\\
 consumption &  & & & & & & & \\
-(400g portions)  & &  & & & & & & \\[1ex]
+(400g portions)  & &  & & & & & & \\
 Total energy intake & 1724 & 35.3& 6.11 & 35 & 2.04 & 0.042 &
 0.021 & (35.01; 35.59)\\
 from fat (\%) & & & & & &  & & \\
@@ -1877,11 +1877,11 @@ definitions of the statistics.}
 & & \multicolumn{2}{r}{Test of $H_{0}: \Delta=0$} & \\
 $\hat{\Delta}$& $\hat{\sigma}_{\hat{\Delta}}$& $t$ & $P$-value &
 95 \% C.I. for $\Delta$ \\ \hline
-\multicolumn{5}{|l|}{Example 7.4: Father's personal well-being}\\[.7ex]
-0.08 & 0.247 & 0.324 & 0.75$^{\dagger}$ & (-0.40; 0.56) \\[1ex]
+\multicolumn{5}{|l|}{Example 7.4: Father's personal well-being}\\
+0.08 & 0.247 & 0.324 & 0.75$^{\dagger}$ & (-0.40; 0.56) \\
 \hline
 \multicolumn{5}{|l|}{Example 7.5: Traffic flows on successive
-Fridays}\\[.7ex]
+Fridays}\\
 -1835 & 372 & -4.93 & 0.001$^{*}$ & (-2676; -994) \\
 \hline
 \multicolumn{5}{l}{{\footnotesize * Obtained from the $t_{9}$
