--- a/_cleaned_tex-sourcefiles/MY451_A.tex
+++ b/_cleaned_tex-sourcefiles/MY451_A.tex
@@ -5,10 +5,10 @@
 
 %\setlength{\parsep}{5cm}
 
-\renewcommand{\chaptername}{\hspace*{-1em}}
-\renewcommand{\thechapter}{\hspace*{-1em}}
-\renewcommand{\thesection}{\hspace*{-1em}}
-\renewcommand{\thesubsection}{\hspace*{-1em}}
+\renewcommand{\chaptername}{}
+\renewcommand{\thechapter}{}
+\renewcommand{\thesection}{}
+\renewcommand{\thesubsection}{}
 \renewcommand{\chaptermark}[1]{\markboth{\MakeUppercase{#1}}{}}
 \renewcommand{\sectionmark}[1]{\markright{\MakeUppercase{#1}}}
 \renewcommand{\thetable}{A.\arabic{table}}
