--- a/_cleaned_tex-sourcefiles/MY451_8.tex
+++ b/_cleaned_tex-sourcefiles/MY451_8.tex
@@ -39,7 +39,7 @@ Section \ref{s_regression_dummies}.
 The following example will be used for illustration throughout this
 chapter:
 
-\textbf{\underline{Example 8.1}: Indicators of Global Civil Society}
+\textbf{Example 8.1: Indicators of Global Civil Society}
 \label{p_civilsoc}
 
 The \emph{Global Civil Society 2004/5} yearbook gives tables of a range
@@ -137,9 +137,9 @@ corruption at least 60. The dotted lines are drawn to the point
 corresponding to the
 United Kingdom.}
 \label{f_corruption1}
-\vspace*{-3ex}
+
 \includegraphics[width=14cm]{corruption1}
-\vspace*{-6ex}
+
 \end{figure}
 
 The observed data are shown as points in the scatterplot, one for each
@@ -189,7 +189,7 @@ the same unit at several occasions over time. This is illustrated by the
 following example (another one is Figure \ref{f_houseprices} on page
 \pageref{f_houseprices}):
 
-\underline{\emph{Example: Changes in temperature, 1903--2004}}
+\emph{Example: Changes in temperature, 1903--2004}
 
 Figure \ref{f_temperatures} summarises data on average annual
 temperatures over the past century in five locations. The data were
@@ -224,7 +224,7 @@ from 1903 in five locations. See the text for further details.}
 \footnotesize{Source: The GISTEMP database
 (\texttt{data.giss.nasa.gov/gistemp/})}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 Consider first the data for Haparanda only. Here we have two variables,
@@ -294,9 +294,9 @@ Figure \ref{f_corruption1}, augmented by the best-fitting (least
 squares) straight line (solid line) and reference lines
 for two example values of Control of corruption (dotted lines).}
 \label{f_corruption2}
-\vspace*{-3ex}
+
 \includegraphics[width=13.5cm]{corruption2}
-\vspace*{-2ex}
+
 \end{figure}
 
 Figure \ref{f_corruption2} shows the same scatterplot as Figure
@@ -377,14 +377,14 @@ correlation coefficient $r$.
 \label{f_scatterplots}
 %\includegraphics[width=12.5cm]{olspl1}
 \begin{center}
-\hspace*{-2.5em}
-\includegraphics[width=8cm]{olspl1}\hspace*{-5em}
+
+\includegraphics[width=8cm]{olspl1}
 \includegraphics[width=8cm]{olspl2}\\
-\hspace*{-2.5em}
-\includegraphics[width=8cm]{olspl3}\hspace*{-5em}
+
+\includegraphics[width=8cm]{olspl3}
 \includegraphics[width=8cm]{olspl4}\\
-\hspace*{-2.5em}
-\includegraphics[width=8cm]{olspl5}\hspace*{-5em}
+
+\includegraphics[width=8cm]{olspl5}
 \includegraphics[width=8cm]{olspl6}\\
 \end{center}
 \end{figure}
@@ -451,9 +451,9 @@ late on (from inevitable wear and tear) and lowest in between for
 163 countries in the Global Civil Society data set. The solid line is
 the best-fitting (least squares) straight line for the points.}
 \label{f_corruption3}
-\vspace*{-5ex}
+
 \includegraphics[width=13.5cm]{corruption3}
-\vspace*{-2ex}
+
 \end{figure}
 
 Returning to real data, recall that we have so far considered control
@@ -519,7 +519,7 @@ First, recall from equation (\ref{sd}) that the sample standard
 deviations of the two variables are calculated as
 \begin{equation}
 s_{x} = \sqrt{\frac{\sum(X_{i}-\bar{X})^{2}}{n-1}}
-\hspace*{1em}\text{and}\hspace*{1em}
+\text{and}
 s_{y} = \sqrt{\frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1}}
 \label{sdyx}
 \end{equation}
@@ -710,7 +710,7 @@ aspects of linear regression modelling which are not covered on this
 course.
 
 \newpage
-\underline{\emph{Example: Predictors of Infant Mortality Rate}}
+\emph{Example: Predictors of Infant Mortality Rate}
 
 The concepts of linear regression models will be illustrated as they are
 introduced with a second example from the Global Civil Society data set.
@@ -750,11 +750,11 @@ Infant mortality rate for countries
 in the Global Civil Society data set ($n=111$). The solid line is
 the best-fitting (least squares) straight line for the points.}
 \label{f_imr1}
-\vspace*{-6ex}
+
 \begin{center}
 \includegraphics[width=13.5cm]{imr1}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 \begin{table}
@@ -922,11 +922,11 @@ the SPSS output will be explained later in this chapter.
 \caption{SPSS output for a simple linear regression model for Infant
 mortality rate given School enrolment in the Global Civil Society data.}
 \label{f_spss_linreg}
-\vspace*{-1ex}
+
 %\includegraphics[bb=100 370 500 750, width=140mm]{spsslinreg}
 %\includegraphics[bb=100 370 500 750, angle=-90, width=140mm]{spsslinreg2}
 \includegraphics[bb=100 90 470 590, angle=-90, width=144mm]{spsslinreg}
-\vspace*{-2ex}
+
 \end{figure}
 
 According to the model, the conditional mean (also often known as the
@@ -956,14 +956,14 @@ Compare two observations, one with value $X$ of the explanatory
 variable, and the other with one unit more, i.e.\ $X+1$. The
 corresponding means of $Y$ are
 
-\vspace*{.5ex}
+
 \begin{tabular}{rlll}
 with $X+1$: & $\mu$ &
 $=\alpha+\beta\times (X+1)$ &
 $=\alpha+\beta X +\beta$ \\
-with $X$\hspace*{1.7em}: & $\mu$ &
+with $X$: & $\mu$ &
 & $=\alpha+\beta X$ \\ \hline
-Difference\hspace*{3ex}: & & & \hspace*{5.5em}$\beta$
+Difference: & & & $\beta$
 \end{tabular}
 \end{itemize}
 which completes the proof of the claims above --- Q.E.D. In case you
@@ -973,11 +973,11 @@ prefer a graphical summary, this is given in Figure \ref{f_linmod_params}.
 \caption{Illustration of the interpretation of the regression
 coefficients of a simple linear regression model.}
 \label{f_linmod_params}
-\vspace*{-4ex}
+
 \begin{center}
 \includegraphics[width=12.5cm]{lmparams}
 \end{center}
-\vspace*{-2ex}
+
 \end{figure}
 
 The most important parameter of the model, and usually the only one
@@ -1142,17 +1142,17 @@ See the text for explanation.}
 \begin{center}
 \includegraphics[width=13.5cm]{lmresids}
 \end{center}
-\vspace*{-6.15cm}\hspace*{6.5cm}$Y_{i}-\hat{Y}_{i}$\vspace*{5.6cm}
+$Y_{i}-\hat{Y}_{i}$
 
-\vspace*{-9.3cm}\hspace*{4.5cm}$Y_{i}-\hat{Y}_{i}$\vspace*{8.3cm}
+$Y_{i}-\hat{Y}_{i}$
 
-\vspace*{-4.1cm}\hspace*{1.6cm}$\bar{Y}$\vspace*{3.6cm}
+$\bar{Y}$
 
-\vspace*{-6.1cm}\hspace*{4.5cm}$\hat{Y}_{i}-\bar{Y}$\vspace*{5.5cm}
+$\hat{Y}_{i}-\bar{Y}$
 
-\vspace*{-6cm}\hspace*{2.2cm}$Y_{i}-\bar{Y}$\vspace*{5.5cm}
+$Y_{i}-\bar{Y}$
 
-\vspace*{-6.3cm}\hspace*{8.9cm}$\hat{Y}=\hat{\alpha}+\hat{\beta} X$\vspace*{5.8cm}
+$\hat{Y}=\hat{\alpha}+\hat{\beta} X$
 \end{figure}
 
 The second point shown in Figure \ref{f_residuals} corresponds to the
@@ -1530,7 +1530,7 @@ $\hat{\beta}=-0.179$, and its estimated standard error
 is $\hat{\text{se}}(\hat{\beta})=0.015$, so the test statistic
 is
 \[
-t=\frac{-0.179}{\hspace*{1em}0.015}=-11.94
+t=\frac{-0.179}{0.015}=-11.94
 \]
 (up to some rounding error). This is shown in the ``t'' column of the
 ``\textbf{Coefficients}'' table. The $P$-value, obtained from the
@@ -1559,7 +1559,7 @@ For a 95\% confidence interval (i.e.\ one with $\alpha=0.05$) in the
 infant mortality example, the multiplier is $t_{0.025}^{(109)}=1.98$,
 and the endpoints of the interval are
 \[
--0.179-1.98\times 0.015=-0.209  \hspace*{1em}\text{and}\hspace*{1em}
+-0.179-1.98\times 0.015=-0.209  \text{and}
 -0.179+1.98\times 0.015=-0.149.
 \]
 These are also shown in the last two columns of the
@@ -1694,7 +1694,7 @@ common cause $Z$.}
 \put(32,20){$Y$}
 \end{picture}
 \end{center}
-\vspace*{-1ex}
+
 \end{figure}
 
 To illustrate a spurious association with a silly but memorable
@@ -1801,7 +1801,7 @@ given three explanatory variables in the Global Civil Society data.}
 \multicolumn{6}{|l|}{Response variable: Infant Mortality Rate (\%)}\\
 \hline
 Explanatory &  & Standard & & & 95 \% Confidence \\
-variable & Coefficient & error\hspace*{1em} & $t$ & $P$-value & interval\\ \hline
+variable & Coefficient & error & $t$ & $P$-value & interval\\ \hline
 Constant & 16.40 & & & & \\
 School enrolment (\%) & -0.139 & 0.014 & -9.87 & $<0.001$& (-0.167;
 -0.111 )\\
@@ -2112,13 +2112,13 @@ hypotheses are, however, subtly but crucially different in
 the two cases. In a multiple model, (\ref{tbeta_m}) is a test statistic
 for the null hypothesis
 \begin{equation}
-H_{0}:\; \beta_{j}=0, \hspace*{1em}\text{other regression coefficients
+H_{0}:\; \beta_{j}=0, \text{other regression coefficients
 are unrestricted}
 \label{H0beta_m}
 \end{equation}
 against the alternative hypothesis
 \[
-H_{a}:\; \beta_{j}\ne0, \hspace*{1em}\text{other regression coefficients
+H_{a}:\; \beta_{j}\ne0, \text{other regression coefficients
 are unrestricted}.
 \]
 Here the statement about ``unrestricted'' other parameters implies that
@@ -2300,12 +2300,12 @@ School enrolment (\%) & $-0.091$ & 0.016 & $-5.69$ & $<0.001$& $(-0.123;
 Control of corruption & $-0.020$ & 0.011 & $-1.75$ & $0.083$& $(-0.043;
 0.003)$\\
 Income inequality & 0.080 & 0.021 & 3.75 & $<0.001$ & (0.038;
-0.122)\\[1ex]
+0.122)\\
 Income level & & & & & \\
 (Reference group: Low) & & & & & \\
-\hspace*{2em}Middle & $-3.210$ & 0.631 & $-5.09$ & $<0.001$ & $(-4.461;
+Middle & $-3.210$ & 0.631 & $-5.09$ & $<0.001$ & $(-4.461;
 -1.958)$\\
-\hspace*{2em}High & $-3.296$ & 1.039 & $-3.17$ & 0.002 & $(-5.357;
+High & $-3.296$ & 1.039 & $-3.17$ & 0.002 & $(-5.357;
 -1.235)$\\
  \hline
 \multicolumn{6}{|l|}{\vspace*{-1.5ex}}\\
@@ -2371,11 +2371,11 @@ Income inequality of 40 is
 \hat{Y}&=&12.0-0.091\times 86-0.020\times 50+0.080\times 40-3.210\times
 0-3.296\times 0\\
 &=&
-6.37 \hspace*{10em}\text{for a low-income country, and }\\
+6.37 \text{for a low-income country, and }\\
 \hat{Y}&=&12.0-0.091\times 86-0.020\times 50+0.080\times 40-3.210\times
 1-3.296\times 0\\
 &=&
-6.37-3.21=3.16 \hspace*{4em}\text{for a middle-income country,}
+6.37-3.21=3.16 \text{for a middle-income country,}
 \end{eqnarray*}
 with a difference of 3.21, as expected. Note how the constant term 12.0
 sets the level for the baseline (low-income) group, and the coefficient
@@ -2580,32 +2580,32 @@ wage example of Section \ref{ss_regression_dummies_example}.}
 & & &  & (mean for & Employment \\
 & & &  & affected & change \\
 Group & \% & $(n)$ & \% ($n$)& restaurants)& (mean) \\ \hline
-Overall & 100 & (368) & 72.8 (268) & 0.115 & $-0.30$ \\[1ex]
+Overall & 100 & (368) & 72.8 (268) & 0.115 & $-0.30$ \\
 Ownership & &  & & & \\
-\hspace*{1em}Franchisee & 64.7 & (238) & 71.8 (171) &  0.122 & $-0.17$\\
-\hspace*{1em}Company & 35.3 & (130) & 74.6\hspace*{.5em} (97) &  0.103 &
-$-0.52$\\[1ex]
+Franchisee & 64.7 & (238) & 71.8 (171) &  0.122 & $-0.17$\\
+Company & 35.3 & (130) & 74.6 (97) &  0.103 &
+$-0.52$\\
 Chain & & & & & \\
-\hspace*{1em}Burger King & 41.0 & (151)& 73.5 (111) & 0.129 & $+0.02$ \\
-\hspace*{1em}Roy Rogers & 24.7 & (91) & 72.5\hspace*{.5em} (66)& 0.104 &
+Burger King & 41.0 & (151)& 73.5 (111) & 0.129 & $+0.02$ \\
+Roy Rogers & 24.7 & (91) & 72.5 (66)& 0.104 &
 $-1.89$ \\
-\hspace*{1em}Wendy's & 13.0 & (48)  & 60.4\hspace*{.5em} (29)& 0.086 &
+Wendy's & 13.0 & (48)  & 60.4 (29)& 0.086 &
 $-0.28$\\
-\hspace*{1em}KFC & 21.2 & (78) & 79.5\hspace*{.5em} (62)& 0.117 &
+KFC & 21.2 & (78) & 79.5 (62)& 0.117 &
 $+0.94$\\
 \hline \hline
 \multicolumn{6}{|l|}{
 Mean employment change}\\
 \multicolumn{6}{|l|}{
-\hspace*{2em}
+
 Among unaffected restaurants: $-2.93$} \\
 \multicolumn{6}{|l|}{
-\hspace*{2em}
-Among affected restaurants: \hspace*{1.1em}$+0.68$} \\
+
+Among affected restaurants: $+0.68$} \\
 \hline
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 
@@ -2623,27 +2623,27 @@ variable: Change in Full-time equivalent employment}\\ \hline
 & Coefficient & ($t$) & Coefficient & ($t$) \\
 Variable & (std error)& $P$-value & (std error)& $P$-value \\  \hline
 Constant & & & & \\
-& -2.63 & & -1.54 & \\[.7ex]
+& -2.63 & & -1.54 & \\
 Affected by the increase & 3.56 & (3.50)& --- & --- \\
- & (1.02) & 0.001 & --- & --- \\[.7ex]
+ & (1.02) & 0.001 & --- & --- \\
 Wage gap & --- & --- & 15.88 & (2.63)\\
-& --- & --- & (6.04) & 0.009 \\[.7ex]
+& --- & --- & (6.04) & 0.009 \\
 Ownership (vs.\ Franchisee)& & & & \\
-\hspace*{1em}Company & 0.22 & (0.20)& 0.43 & (0.40) \\
-& (1.06) & 0.84& (1.07) & 0.69 \\[.7ex]
+Company & 0.22 & (0.20)& 0.43 & (0.40) \\
+& (1.06) & 0.84& (1.07) & 0.69 \\
 Chain (vs.\ Burger King) & & & & \\
-\hspace*{1em}Roy Rogers & -2.00 & (-1.56)& -1.84 & (-1.43)\\
+Roy Rogers & -2.00 & (-1.56)& -1.84 & (-1.43)\\
 & (1.28) & 0.12 & (1.29)& 0.15\\
-\hspace*{1em}Wendy's & 0.15 & (0.11)& 0.36 & (0.24)\\
+Wendy's & 0.15 & (0.11)& 0.36 & (0.24)\\
 & (1.44) & 0.92& (1.46)& 0.81\\
-\hspace*{1em}KFC & 0.64 & (0.51)& 0.81 & (0.64)\\
+KFC & 0.64 & (0.51)& 0.81 & (0.64)\\
 & (1.25)& 0.61 & (1.26)& 0.52 \\ \hline
-\vspace*{-2ex} & & & & \\
-\hspace*{10em}$R^{2}$ & 0.046& & 0.032 & \\
+ & & & & \\
+$R^{2}$ & 0.046& & 0.032 & \\
 \hline
 \end{tabular}
 \end{center}
-\vspace*{-3ex}
+
 \end{table}
 
 Table \ref{t_fastfood_models} shows results for two linear regression
@@ -2880,4 +2880,3 @@ fitted as standard linear regression models with appropriate use of
 dummy variables, but the conventional terminology and notation for ANOVA
 and ANCOVA are somewhat different from the ones used here.
 \end{itemize}
-
